Offer/checkout: JWT et proxy dev, Securite offer, Stripe checkout relatif, ML predict fix, nettoyages front/back
Co-authored-by: Cursor <cursoragent@cursor.com>